# fastapi_auth

./: .gitignore  .python-version  LICENSE  README.md  migrations.md  pyproject.toml  requirements.txt
migrations/: 20250715222234_create_auth_table.down.sql  20250715222234_create_auth_tables.up.sql  20250715222234_create_users_table.down.sql  20250715222234_create_users_table.up.sql
src/: config.py  gunicorn.conf.py  main.py
src/app/admin/: routes.py
src/app/auth/: dependancies.py  models.py  repositories.py  routes.py  service.py  utils.py
src/app/core/: db.py  dependancies.py  globals.py  logging.py  startup.py  utils.py
src/sql_queries/auth/: get_user_by_username.sql  insert_refresh_token.sql  insert_user.sql  logout_user.sql  verify_refresh_token.sql
tests/: __init__.py  conftest.py  test_auth.py
tests/admin/: conftest.py  test_admin.py
tests/auth/: test_auth_repo.py  test_auth_routes.py  test_auth_service.py
tests/core/: test_logger.py
tests/sql_queries/: insert_admin.sql  setup_db.sql
